tests/ui/parser/issues/issue-111692.stderr
error: struct literals are not allowed here
  --> $DIR/issue-111692.rs:12:13
   |
LL |     if x == module::Type { x: module::C, y: 1 } {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: surround the struct literal with parentheses
   |
LL |     if x == (module::Type { x: module::C, y: 1 }) {
   |             +                                   +

error: struct literals are not allowed here
  --> $DIR/issue-111692.rs:17:12
   |
LL |     if x ==module::Type { x: module::C, y: 1 } {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: surround the struct literal with parentheses
   |
LL |     if x ==(module::Type { x: module::C, y: 1 }) {
   |            +                                   +

error: struct literals are not allowed here
  --> $DIR/issue-111692.rs:24:13
   |
LL |     if x == Type { x: module::C, y: 1 } {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: surround the struct literal with parentheses
   |
LL |     if x == (Type { x: module::C, y: 1 }) {
   |             +                           +

error: struct literals are not allowed here
  --> $DIR/issue-111692.rs:30:13
   |
LL |     if x == demo_module::Type { x: module::C, y: 1 } {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: surround the struct literal with parentheses
   |
LL |     if x == (demo_module::Type { x: module::C, y: 1 }) {
   |             +                                        +

error: aborting due to 4 previous errors

